<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_vertical_margin"
    android:layout_marginBottom="@dimen/fragment_vertical_margin"
    android:layout_marginLeft="@dimen/fragment_horizontal_margin"
    android:layout_marginRight="@dimen/fragment_horizontal_margin" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_item_vertical_margin"
        android:text="@string/login_username_label"
        android:labelFor="@+id/login_username" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_item_vertical_margin"
        android:text="@string/login_password_label"
        android:labelFor="@+id/login_password"/>

    <me.philio.pinentry.PinEntryView
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/fragment_horizontal_margin"
        android:layout_marginBottom="@dimen/fragment_horizontal_margin"
        app:accentType="all"
        app:digitBackground="@android:color/white"
        app:digitElevation="2dp"
        app:digitTextSize="5sp"
        app:numDigits="6"
        app:accentWidth="1dp"
        app:digitWidth="35dp"
        app:digitHeight="35dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/SecondaryButton"
        android:text="@string/login_button_text"
        android:enabled="false" />
</LinearLayout>
